--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,42 @@
 {
-  "name": "App Install Banner Sample",
-  "short_name": "App Install Banner Sample",
-  "icons": [
-    {
-      "src": "launcher-icon-0-75x.png",
-      "sizes": "36x36",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-1x.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-1-5x.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-2x.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-3x.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-4x.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone"
+  "name": "Club Selecta",
+  "short_name": "Club Selecta",
+  "icons": [{
+    "src": "images/touch/icon-72x72.png",
+    "sizes": "72x72",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/icon-96x96.png",
+    "sizes": "96x96",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/icon-128x128.png",
+    "sizes": "128x128",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/ms-touch-icon-144x144-precomposed.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/apple-touch-icon.png",
+    "sizes": "152x152",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/chrome-touch-icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/chrome-splashscreen-icon-384x384.png",
+    "sizes": "384x384",
+    "type": "image/png"
+  }, {
+    "src": "images/touch/icon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }],
+  "background_color": "#171733",
+  "theme_color": "#171733",
+  "display": "standalone",
+  "orientation": "portrait",
+  "start_url": "./index.html"
 }
